# RocketAscentSimulator

./: LICENSE  README.md  pyproject.toml
my_testing/: test_core.py
src/rocketSimulator/: __init__.py  __main__.py  core.py  models.py  plotting.py
src/rocketSimulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
